# TODO: add bzlmod version of cuda_redist_json
module(
    name = "cuda-samples",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "rules_cuda", version = "0.2.3")
local_path_override(
    module_name = "rules_cuda",
    path = "../rules_cuda",
)

cuda = use_extension("@rules_cuda//cuda:extensions.bzl", "toolchain")
cuda.redist_json(
    name = "rules_cuda_redist_json",
    components = [
        "cccl",
        "cudart",
        "nvcc",
        "cublas",
        "curand",
        "cufft",
        "cusolver",
        "cusparse",
        "npp",
        "nvrtc",
        "nvjitlink",
        "nvjpeg",
    ],
    # either or version or urls must be specified
    version = "12.6.3",
    # urls = ["https://developer.download.nvidia.com/compute/cuda/redist/redistrib_12.8.1.json"],
)
cuda.toolkit(name = "cuda")
use_repo(cuda, "cuda")
