module(
    name = "cuda-samples",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "rules_cuda", version = "0.2.3")
local_path_override(
    module_name = "rules_cuda",
    path = "../rules_cuda",
)

cuda = use_extension("@rules_cuda//cuda:extensions.bzl", "toolchain")

cuda.component(
    name = "local_cuda_cccl",
    component_name = "cccl",
    sha256 = "9c3145ef01f73e50c0f5fcf923f0899c847f487c529817daa8f8b1a3ecf20925",
    strip_prefix = "cuda_cccl-linux-x86_64-12.6.77-archive",
    urls = ["https://developer.download.nvidia.com/compute/cuda/redist/cuda_cccl/linux-x86_64/cuda_cccl-linux-x86_64-12.6.77-archive.tar.xz"],
)

cuda.component(
    name = "local_cuda_cudart",
    component_name = "cudart",
    sha256 = "f74689258a60fd9c5bdfa7679458527a55e22442691ba678dcfaeffbf4391ef9",
    strip_prefix = "cuda_cudart-linux-x86_64-12.6.77-archive",
    urls = ["https://developer.download.nvidia.com/compute/cuda/redist/cuda_cudart/linux-x86_64/cuda_cudart-linux-x86_64-12.6.77-archive.tar.xz"],
)

cuda.component(
    name = "local_cuda_nvcc",
    component_name = "nvcc",
    sha256 = "840deff234d9bef20d6856439c49881cb4f29423b214f9ecd2fa59b7ac323817",
    strip_prefix = "cuda_nvcc-linux-x86_64-12.6.85-archive",
    urls = ["https://developer.download.nvidia.com/compute/cuda/redist/cuda_nvcc/linux-x86_64/cuda_nvcc-linux-x86_64-12.6.85-archive.tar.xz"],
)

cuda.component(
    name = "local_cuda_cublas",
    component_name = "cublas",
    sha256 = "ec682bac6387f9cdfd0c20b25a16cd6ed0b8b3b7ff42be9eaeb41828e3a72572",
    strip_prefix = "libcublas-linux-x86_64-12.6.4.1-archive",
    urls = ["https://developer.download.nvidia.com/compute/cuda/redist/libcublas/linux-x86_64/libcublas-linux-x86_64-12.6.4.1-archive.tar.xz"],
)

cuda.component(
    name = "local_cuda_cufft",
    component_name = "cufft",
    sha256 = "63a046d51a45388e10612c3fd423bb7fa5127496aa9bb3951a609e8b9d996852",
    strip_prefix = "libcufft-linux-x86_64-11.3.0.4-archive",
    urls = ["https://developer.download.nvidia.com/compute/cuda/redist/libcufft/linux-x86_64/libcufft-linux-x86_64-11.3.0.4-archive.tar.xz"],
)

cuda.component(
    name = "local_cuda_cusolver",
    component_name = "cusolver",
    sha256 = "7cf794bf21c4947d0922e378984fa7939f0811bfc355121be1a0d44cd8695c09",
    strip_prefix = "libcusolver-linux-x86_64-11.7.1.2-archive",
    urls = ["https://developer.download.nvidia.com/compute/cuda/redist/libcusolver/linux-x86_64/libcusolver-linux-x86_64-11.7.1.2-archive.tar.xz"],
)

cuda.component(
    name = "local_cuda_cusparse",
    component_name = "cusparse",
    sha256 = "a9ad797756a7bb9a92bf8a63768dec837af38064ee8be3c32e21382e03604bd8",
    strip_prefix = "libcusparse-linux-x86_64-12.5.4.2-archive",
    urls = ["https://developer.download.nvidia.com/compute/cuda/redist/libcusparse/linux-x86_64/libcusparse-linux-x86_64-12.5.4.2-archive.tar.xz"],
)

cuda.component(
    name = "local_cuda_npp",
    component_name = "npp",
    sha256 = "0a7f5bb81e65e60775f831990a567394682a209694b396a4e9233a6c91db65e3",
    strip_prefix = "libnpp-linux-x86_64-12.3.1.54-archive",
    urls = ["https://developer.download.nvidia.com/compute/cuda/redist/libnpp/linux-x86_64/libnpp-linux-x86_64-12.3.1.54-archive.tar.xz"],
)

cuda.component(
    name = "local_cuda_nvrtc",
    component_name = "nvrtc",
    sha256 = "a4289ba86f0deeccf4e1d94c58559eae4c8184fcb6eaade8fcab45584e6cf402",
    strip_prefix = "cuda_nvrtc-linux-x86_64-12.6.85-archive",
    urls = ["https://developer.download.nvidia.com/compute/cuda/redist/cuda_nvrtc/linux-x86_64/cuda_nvrtc-linux-x86_64-12.6.85-archive.tar.xz"],
)

cuda.component(
    name = "local_cuda_nvjitlink",
    component_name = "nvjitlink",
    sha256 = "1055077ce594fad6fd86d23604c60c64b673cdc8dd01fae7e0cbec633c35930d",
    strip_prefix = "libnvjitlink-linux-x86_64-12.6.85-archive",
    urls = ["https://developer.download.nvidia.com/compute/cuda/redist/libnvjitlink/linux-x86_64/libnvjitlink-linux-x86_64-12.6.85-archive.tar.xz"],
)

cuda.component(
    name = "local_cuda_nvjpeg",
    component_name = "nvjpeg",
    sha256 = "f74f6aee35ef4fb1619bc2a67be943c3d1a84d6746b41788c44a7d3b0d9ae3b4",
    strip_prefix = "libnvjpeg-linux-x86_64-12.3.3.54-archive",
    urls = ["https://developer.download.nvidia.com/compute/cuda/redist/libnvjpeg/linux-x86_64/libnvjpeg-linux-x86_64-12.3.3.54-archive.tar.xz"],
)

cuda.toolkit(
    name = "local_cuda",
    components_mapping = {
        "cccl": "@local_cuda_cccl",
        "cudart": "@local_cuda_cudart",
        "nvcc": "@local_cuda_nvcc",
        "cublas": "@local_cuda_cublas",
        "cufft": "@local_cuda_cufft",
        "cusolver": "@local_cuda_cusolver",
        "cusparse": "@local_cuda_cusparse",
        "npp": "@local_cuda_npp",
        "nvrtc": "@local_cuda_nvrtc",
        "nvjitlink": "@local_cuda_nvjitlink",
        "nvjpeg": "@local_cuda_nvjpeg",
    },
    version = "12.6.1",
)

use_repo(
    cuda,
    "local_cuda_cccl",
    "local_cuda_cudart",
    "local_cuda_nvcc",
    "local_cuda_cublas",
    "local_cuda_cufft",
    "local_cuda_cusolver",
    "local_cuda_cusparse",
    "local_cuda_npp",
    "local_cuda_nvrtc",
    "local_cuda_nvjitlink",
    "local_cuda_nvjpeg",
    "local_cuda",
)
