module(
    name = "cuda-samples",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "rules_cuda", version = "0.2.3")
local_path_override(
    module_name = "rules_cuda",
    path = "../rules_cuda",
)

cuda = use_extension("@rules_cuda//cuda:extensions.bzl", "toolchain")


cuda.component(
    name = "cuda_cccl",
    component_name = "cccl",
    sha256 = "ed845eae8c1767706b6ee91e40c608a03f6f633551a849b63f7346d32d73ee60",
    strip_prefix = "cuda_cccl-linux-x86_64-13.0.85-archive",
    urls = ["https://developer.download.nvidia.com/compute/cuda/redist/cuda_cccl/linux-x86_64/cuda_cccl-linux-x86_64-13.0.85-archive.tar.xz"],
)

cuda.component(
    name = "cuda_cudart",
    component_name = "cudart",
    sha256 = "25b8071951baba827be1580b841d363464f6ee6c39f48d33a81646f90cc95ed1",
    strip_prefix = "cuda_cudart-linux-x86_64-13.0.96-archive",
    urls = ["https://developer.download.nvidia.com/compute/cuda/redist/cuda_cudart/linux-x86_64/cuda_cudart-linux-x86_64-13.0.96-archive.tar.xz"],
)

cuda.component(
    name = "cuda_crt",
    component_name = "crt",
    sha256 = "5a3279a049ffc1cdb951c44cb95206acfdde9e9ae5e87825fc18d7e4a6878bb0",
    strip_prefix = "cuda_crt-linux-x86_64-13.0.88-archive",
    urls = ["https://developer.download.nvidia.com/compute/cuda/redist/cuda_crt/linux-x86_64/cuda_crt-linux-x86_64-13.0.88-archive.tar.xz"],
)

cuda.component(
    name = "cuda_nvcc",
    component_name = "nvcc",
    sha256 = "48e35be3cfbf4b4fbc16828eaec8a7048ee789403049dc409f7b643d6259cf7a",
    strip_prefix = "cuda_nvcc-linux-x86_64-13.0.88-archive",
    urls = ["https://developer.download.nvidia.com/compute/cuda/redist/cuda_nvcc/linux-x86_64/cuda_nvcc-linux-x86_64-13.0.88-archive.tar.xz"],
    version = "13.0.88",
)

cuda.component(
    name = "cuda_nvvm",
    component_name = "nvvm",
    sha256 = "17ef1665b63670887eeba7d908da5669fa8c66bb73b5b4c1367f49929c086353",
    strip_prefix = "libnvvm-linux-x86_64-13.0.88-archive",
    urls = ["https://developer.download.nvidia.com/compute/cuda/redist/libnvvm/linux-x86_64/libnvvm-linux-x86_64-13.0.88-archive.tar.xz"],
)

cuda.component(
    name = "cuda_culibos",
    component_name = "culibos",
    sha256 = "98fca11f9ab89be61385a67eee686c1ebf76fad9c7269d0cf9090edfcdb8a8ac",
    strip_prefix = "cuda_culibos-linux-x86_64-13.0.85-archive",
    urls = ["https://developer.download.nvidia.com/compute/cuda/redist/cuda_culibos/linux-x86_64/cuda_culibos-linux-x86_64-13.0.85-archive.tar.xz"],
)

cuda.component(
    name = "cuda_cublas",
    component_name = "cublas",
    sha256 = "88bc951efd906032a371153ca61975e0d9c4761e4012169169a6b3a47931606e",
    strip_prefix = "libcublas-linux-x86_64-13.1.0.3-archive",
    urls = ["https://developer.download.nvidia.com/compute/cuda/redist/libcublas/linux-x86_64/libcublas-linux-x86_64-13.1.0.3-archive.tar.xz"],
)

cuda.component(
    name = "cuda_cufft",
    component_name = "cufft",
    sha256 = "5cdef1238c270f8f148da18587fdba8b9478c596e40f5490bba2b15c94915dd9",
    strip_prefix = "libcufft-linux-x86_64-12.0.0.61-archive",
    urls = ["https://developer.download.nvidia.com/compute/cuda/redist/libcufft/linux-x86_64/libcufft-linux-x86_64-12.0.0.61-archive.tar.xz"],
)

cuda.component(
    name = "cuda_curand",
    component_name = "curand",
    sha256 = "ee0dbf473998050bda876cb945634bec87d44b90b05a5550e9c2499ab7c1a5c3",
    strip_prefix = "libcurand-linux-x86_64-10.4.0.35-archive",
    urls = ["https://developer.download.nvidia.com/compute/cuda/redist/libcurand/linux-x86_64/libcurand-linux-x86_64-10.4.0.35-archive.tar.xz"],
)

cuda.component(
    name = "cuda_cusolver",
    component_name = "cusolver",
    sha256 = "1cd13dcb58c5e4bb0ce47ea8876aba21091c1e67165c616144b2dd6331d252ec",
    strip_prefix = "libcusolver-linux-x86_64-12.0.4.66-archive",
    urls = ["https://developer.download.nvidia.com/compute/cuda/redist/libcusolver/linux-x86_64/libcusolver-linux-x86_64-12.0.4.66-archive.tar.xz"],
)

cuda.component(
    name = "cuda_cusparse",
    component_name = "cusparse",
    sha256 = "b9de356c3478329e2589d91284f2a685a36f041060f3cb897441ab46a480a30a",
    strip_prefix = "libcusparse-linux-x86_64-12.6.3.3-archive",
    urls = ["https://developer.download.nvidia.com/compute/cuda/redist/libcusparse/linux-x86_64/libcusparse-linux-x86_64-12.6.3.3-archive.tar.xz"],
)

cuda.component(
    name = "cuda_npp",
    component_name = "npp",
    sha256 = "b99e7e145283667728e5fd1bf99c79ed9825c164d3c4a40f6dc549cb0b0e1333",
    strip_prefix = "libnpp-linux-x86_64-13.0.1.2-archive",
    urls = ["https://developer.download.nvidia.com/compute/cuda/redist/libnpp/linux-x86_64/libnpp-linux-x86_64-13.0.1.2-archive.tar.xz"],
)

cuda.component(
    name = "cuda_nvrtc",
    component_name = "nvrtc",
    sha256 = "00038aac08e1dba6f1933237dbfb217ac6452ae24fab970edcac808f103ca64b",
    strip_prefix = "cuda_nvrtc-linux-x86_64-13.0.88-archive",
    urls = ["https://developer.download.nvidia.com/compute/cuda/redist/cuda_nvrtc/linux-x86_64/cuda_nvrtc-linux-x86_64-13.0.88-archive.tar.xz"],
)

cuda.component(
    name = "cuda_nvjitlink",
    component_name = "nvjitlink",
    sha256 = "25f9763fd60122a4f728eec22ac4e64e46ea8679e140234f15eaec008e6c41a8",
    strip_prefix = "libnvjitlink-linux-x86_64-13.0.88-archive",
    urls = ["https://developer.download.nvidia.com/compute/cuda/redist/libnvjitlink/linux-x86_64/libnvjitlink-linux-x86_64-13.0.88-archive.tar.xz"],
)

cuda.component(
    name = "cuda_nvjpeg",
    component_name = "nvjpeg",
    sha256 = "ebef16a52d31d2de0e888f0fd9c788bfe99be988ebad4927754e5ccdfdae6360",
    strip_prefix = "libnvjpeg-linux-x86_64-13.0.1.86-archive",
    urls = ["https://developer.download.nvidia.com/compute/cuda/redist/libnvjpeg/linux-x86_64/libnvjpeg-linux-x86_64-13.0.1.86-archive.tar.xz"],
)

cuda.component(
    name = "cuda_nvtx",
    component_name = "nvtx",
    sha256 = "ed150e6fb1b50663ff068cccee3c5e2ca581c3b939b321656afbc9193671137d",
    strip_prefix = "cuda_nvtx-linux-x86_64-13.0.85-archive",
    urls = ["https://developer.download.nvidia.com/compute/cuda/redist/cuda_nvtx/linux-x86_64/cuda_nvtx-linux-x86_64-13.0.85-archive.tar.xz"],
)

cuda.toolkit(
    name = "cuda",
    components_mapping = {
        "cccl": "@cuda_cccl",
        "cudart": "@cuda_cudart",
        "crt": "@cuda_crt",
        "nvcc": "@cuda_nvcc",
        "nvvm": "@cuda_nvvm",
        "culibos": "@cuda_culibos",
        "cublas": "@cuda_cublas",
        "cufft": "@cuda_cufft",
        "curand": "@cuda_curand",
        "cusolver": "@cuda_cusolver",
        "cusparse": "@cuda_cusparse",
        "npp": "@cuda_npp",
        "nvrtc": "@cuda_nvrtc",
        "nvjitlink": "@cuda_nvjitlink",
        "nvjpeg": "@cuda_nvjpeg",
        "nvtx": "@cuda_nvtx",
    },
    version = "13.0.2",
)

use_repo(cuda, "cuda")
